<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geekcoders.payingguest.Activities.AddWorkerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/colorPrimary"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/background_signup"


                    android:tint="@color/colorPrimary"
                    >
                </ImageView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Margin30"
                android:layout_marginRight="@dimen/Margin30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/Margin5"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/img_worker"
                        android:layout_width="150dp"
                        android:src="@drawable/place_holder"
                        android:layout_height="150dp" />
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtFname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fname"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:textSize="@dimen/Largetext" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtLname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lname"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:textSize="@dimen/Largetext" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtWorkerType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Worker Type"
                        android:inputType="text"
                        android:maxLength="50"
                        android:textSize="@dimen/Largetext" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Price"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="@dimen/Largetext" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Contact Number"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textSize="@dimen/Largetext" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Description"
                        android:inputType="textMultiLine"
                        android:maxLength="150"
                        android:textSize="@dimen/Largetext" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_city"
                    android:layout_marginTop="@dimen/Margin5"
                    android:layout_marginBottom="@dimen/Margin5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Margin30"
                android:layout_marginTop="@dimen/Margin30"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_bordered"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/Margin10"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_success" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/success"
                        android:textColor="@color/black"
                        android:textSize="@dimen/MediumText"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnAddWorker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_btn"
                    android:elevation="@dimen/Margin20"
                    android:text="Add Worker"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
